--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
 body {
   margin: 0;
@@ -12,4 +12,22 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+/* ul {
+  list-style-type: none;
+} */
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* background-color: green; */
+  width: 500px;
+
+  box-shadow: inset 0 -3em 5em rgba(128, 128, 128, 0.5), 0 0 0 3px white,
+    0.5em 0.5em 1.5em rgba(128, 128, 128, 0.8);
+  border-radius: 15px;
+  /* outline-color: #fff; */
 }
